<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.miguel.easyjobs.companyView.NewOfferActivity"
    tools:showIn="@layout/app_bar_new_offer">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/new_offer_title"
                android:hint="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/separator_form" />

            <EditText
                android:id="@+id/new_offer_job"
                android:hint="@string/job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/separator_form" />

            <EditText
                android:id="@+id/new_offer_province"
                android:hint="@string/select_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/separator_form" />

            <TextView
                android:id="@+id/new_offer_period_of_time"
                android:text="@string/datefinish2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/new_offer_date"
                android:hint="@string/date"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp" />

            <Spinner
                android:id="@+id/new_offer_contract_type"
                android:hint="@string/contract_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />

            <Spinner
                android:id="@+id/new_offer_workday"
                android:hint="@string/workday_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />

            <EditText
                android:id="@+id/new_offer_description"
                android:hint="@string/offer_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp" />

            <CheckBox
                android:text="@string/visible_offer"
                android:id="@+id/new_offer_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />

            <Button
                android:id="@+id/new_offer_create"
                android:text="@string/create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/standar_button"
                style="@style/buttonStyle" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
