<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_1"
    tools:context="com.miguel.easyjobs.RegisterActivity">

    <ScrollView
        android:id="@+id/register_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/register_name_input"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/separator_form"
                android:inputType="text" />

            <EditText
                android:id="@+id/register_email_input"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/separator_form"
                android:inputType="text" />

            <EditText
                android:id="@+id/register_pass_input"
                android:hint="@string/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/separator_form"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/register_birthday"
                android:hint="@string/birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/separator_form" />

            <EditText
                android:id="@+id/register_province"
                android:hint="@string/select_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/separator_form" />

            <EditText
                android:id="@+id/register_phone"
                android:hint="@string/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:layout_marginBottom="@dimen/separator_form" />

            <Spinner
                android:id="@+id/register_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/register_register"
                android:text="@string/register"
                android:background="@drawable/standar_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/buttonStyle" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
