<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_new_title"
    tools:context=".employeeView.NewTitleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/new_title_title"
                android:hint="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/separator_form" />

            <EditText
                android:id="@+id/new_title_center"
                android:hint="@string/center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/separator_form"
                android:layout_below="@id/new_title_title" />

            <EditText
                android:id="@+id/new_title_province"
                android:hint="@string/select_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/separator_form"
                android:layout_below="@id/new_title_center" />

            <TextView
                android:id="@+id/new_title_period_of_time"
                android:text="@string/period_of_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_title_province"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/new_title_datestart"
                android:hint="@string/datestart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_title_period_of_time"
                android:layout_toLeftOf="@+id/new_title_empty"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="25dp" />

            <TextView
                android:id="@+id/new_title_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_title_period_of_time"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp" />

            <EditText
                android:id="@+id/new_title_datefinish"
                android:hint="@string/datefinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_title_period_of_time"
                android:layout_toRightOf="@+id/new_title_empty"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp" />

            <Switch
                android:id="@+id/new_title_currently_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_alignBottom="@+id/new_title_currently_work_text"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/new_title_currently_work_text"
                android:text="@string/currently_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_title_datestart"
                android:layout_marginBottom="50dp" />

            <Button
                android:id="@+id/new_title_create"
                android:text="@string/create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/standar_button"
                android:layout_below="@id/new_title_currently_work_text"
                style="@style/buttonStyle" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
