<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/main_phrase"
        android:text="@string/main_phrase"
        style="@style/textWhiteBold"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_title"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/main_register"
        android:text="@string/main_register"
        style="@style/buttonStyle"
        android:textSize="20sp"
        android:background="@drawable/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_enter"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/main_enter"
        android:text="@string/main_enter"
        style="@style/buttonStyle"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
